fixing more print spacing issues

--- a/src/Hvz/GameBundle/Resources/public/css/print.css
+++ b/src/Hvz/GameBundle/Resources/public/css/print.css
@@ -1,9 +1,5 @@
 .card-spacer {
-	height: 4.4em;
-}
-
-.card-spacer-half {
-	height: 2.2em;
+	height: 10.0em;
 }
 
 .card {
